fixed the broken images

--- a/app.ipynb
+++ b/app.ipynb
@@ -1000,8 +1000,7 @@
     "# Setting up a linear model\n",
     "\n",
     "We need to multiply our rows of data by coefficients that are randomized and made for each column:  \n",
-    "\n",
-    "<img src=\"Example-of-a-linear-ML-model-The-outcome-y-is-predicted-by-the-multiplication-of-feature.png\"\n",
+    "<img src=\"images/Example-of-a-linear-ML-model-The-outcome-y-is-predicted-by-the-multiplication-of-feature.png\"\n",
     "     alt=\"linear ML model outcome\" />    \n",
     "\n",
     "1 Set the seed for the tensor to simulate creating some \"random\" number generation.  \n",
@@ -1039,7 +1038,7 @@
    "source": [
     "We then multiply our matrix to our vector via element-wise multiplication through broadcasting and the use of (*) symbol:\n",
     "  \n",
-    "<img src=\"Numpy-Broadcasting.png\"\n",
+    "<img src=\"images/Numpy-Broadcasting.png\"\n",
     "     alt=\"linear ML model outcome\" />\n",
     "\n",
     "\n",
@@ -1197,7 +1196,7 @@
     "\n",
     "Here's what that would look like:  \n",
     "\n",
-    "<img src=\"Gradient_Descent.png\"\n",
+    "<img src=\"images/Gradient_Descent.png\"\n",
     "     alt=\"linear ML model outcome\" />  \n",
     "\n",
     "\n",
@@ -1261,7 +1260,7 @@
     "\n",
     "This function sums up the essence of the gradient descent algorithm and the missing piece that is solved in the next piece of code:  \n",
     "\n",
-    "<img src=\"Gradient_Descent_Formula.webp\"\n",
+    "<img src=\"images/Gradient_Descent_Formula.webp\"\n",
     "     alt=\"linear ML model outcome\" />  \n",
     "\n",
     "\n",
@@ -1381,7 +1380,7 @@
     "\n",
     "The formula from the image above is what this next piece of code performs and this image below describes how this process flows to train our model:  \n",
     "\n",
-    "<img src=\"Simple_Learning_Algorithm.jpg\"\n",
+    "<img src=\"images/Simple_Learning_Algorithm.jpg\"\n",
     "     alt=\"linear ML model outcome\" />  \n",
     "\n",
     "\n",
@@ -1422,18 +1421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/devcontainers/conda/envs/env-01/lib/python3.10/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fastai.data.transforms import RandomSplitter\n",
     "trn_split,val_split=RandomSplitter(seed=42)(df)"
@@ -2194,7 +2184,7 @@
    "source": [
     "# A Neural Network\n",
     "\n",
-    "<img src=\"neural_network-1024x707.webp\"\n",
+    "<img src=\"images/neural_network-1024x707.webp\"\n",
     "     alt=\"linear ML model outcome\" />  \n",
     "\n",
     "The image above is a visual representation of how a neural network works.  \n",
